# zane-bzl

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  MODULE.bazel  package.json  pnpm-lock.yaml
bot/: BUILD.bazel  zane.rs
frontend/: BUILD.bazel  README.md  build_smoke_test.js  jest.config.js  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  BUILD.bazel  index.css  index.tsx  reportWebVitals.ts
tools/remote-toolchains/: BUILD.bazel  extract-bazel-auto-toolchains.sh
tools/remote-toolchains/extract-bazel-auto-toolchains-fixture/: WORKSPACE  doit.sh
tools/remote-toolchains/ubuntu-act-22-04/local_config_cc/: BUILD
