module(
    name = "zane",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
#### JS SUPPORT
bazel_dep(name = "aspect_rules_js", version = "1.32.2")
bazel_dep(name = "aspect_rules_ts", version = "2.0.0")
bazel_dep(name = "aspect_rules_swc", version = "1.0.2")
bazel_dep(name = "aspect_rules_jest", version = "0.19.5")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    public_hoist_packages = {
        "eslint-config-react-app": ["frontend"],
        "eslint@8.51.0": ["frontend"],
    },
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

#### RUST SUPPORT
bazel_dep(name = "rules_rust", version = "0.0.0")
git_override(
    module_name = "rules_rust",
    remote = "git@github.com:matts1/rules_rust.git",
    commit = "d61fc8eddccd23d124c6a6477c1b8bc63203cdfe"
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")


crate = use_extension("@rules_rust//rust:extensions.bzl", "crate")
crate.from_cargo(
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)

use_repo(
    crate,
    crates = "zane_crates",
)

#### OCI SUPPORT 
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_oci", version = "1.4.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.toolchains(
    name = "oci",
    crane_version = "v0.14.0",
    zot_version = "",
)

oci.pull(
    name = "debian_base",
    digest = "sha256:cac248b86084e8740410031cb3ed0e6a0d7ba63cfae8b3761b84f18d087b028d",
    image = "docker.io/library/debian",
)

use_repo(oci, "debian_base")
